# job-scraper-dashboard

./: .gitignore  AGENTS.md  INDEX.md  Makefile  README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260526_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py  errors.py
backend/app/core/: config.py
backend/app/db/: base.py  seeds.py  session.py
backend/app/exporters/: README.md  __init__.py  contracts.py  csv_exporter.py  registry.py  xlsx_exporter.py
backend/app/repositories/: README.md  __init__.py  interfaces.py  job_bookmark_repo.py  job_listing_repo.py  job_source_repo.py  raw_job_repo.py  scrape_run_repo.py  source_profile_repo.py
backend/app/schemas/: README.md  __init__.py  bookmark.py  common.py  export.py  job_listing.py  job_source.py  raw_job.py  scrape_run.py  source_profile.py
backend/app/scrapers/: README.md  __init__.py  contracts.py  registry.py
backend/app/services/: README.md  __init__.py  dedupe_service.py  errors.py  export_service.py  job_bookmark_service.py  job_listing_service.py  job_source_config_validator.py  job_source_service.py  normalization_service.py  scrape_run_service.py  source_profile_service.py
backend/tests/: conftest.py
backend/tests/api/: test_phase3_routes.py
backend/tests/fixtures/: README.md
backend/tests/integration/: test_placeholder.py  test_repository_smoke.py  test_scrape_run_service.py
backend/tests/unit/: test_config.py  test_csv_exporter.py  test_dedupe_service.py  test_dto_validation.py  (+10 more)
(+114 files in other folders)
